Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/syntax/6318240/BarNeg2a.out
BarNeg2a.java:9:60: compiler.err.cant.select.static.class.from.param.type
1 error
